Mon Feb 21 10:01:01 2011  Aaron Patterson <aaron@tenderlovemaking.com>

	* ext/psych/lib/psych/json/stream.rb: fix JSON stream emits to use
	  double quotes during stream.
	* test/psych/json/test_stream.rb: tests to reflect changes.

Mon Feb 21 00:38:56 2011  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* test/ruby/test_system.rb (TestSystem#test_system_at):
	  add testcase for bug4396.

Sun Feb 20 19:59:32 2011  Tanaka Akira  <akr@fsij.org>

	* ext/openssl/ossl_cipher.c: parenthesize macro arguments.

Sun Feb 20 16:26:45 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* thread.c (exec_recursive): prevent temporary objects from GC.

	* prevent temporary objects from GC, and should not use
	  RSTRING_PTR() for function calls since it evaluates the argument
	  a couple of times.

Sun Feb 20 16:22:53 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* file.c (rb_file_flock): use rb_thread_io_blocking_region for the
	  time being.

Sun Feb 20 05:33:17 2011  Ryan Davis  <ryand-ruby@zenspider.com>

	* lib/minitest/*.rb: Imported minitest 2.0.2 r6207.
	* test/minitest/*: ditto

Sun Feb 20 02:14:09 2011  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* signal.c (sig_trap): avoid pthread_sigmask(xx, &mask, &mask) usage
	  because FreeBSD don't permit it. If it's used, it behave as
	  pthread_sigmask(xx, NULL, &mask).

	* signal.c (init_sigchld): ditto.

Sun Feb 20 00:46:51 2011  Tanaka Akira  <akr@fsij.org>

	* ext/openssl/ossl_bn.c: parenthesize macro arguments.

Sat Feb 19 22:37:42 2011  CHIKANAGA Tomoyuki  <nagachika00@gmail.com>

	* vm_insnhelper.c (vm_check_if_namespace): guard temporary object
	  from GC.

Sat Feb 19 06:36:27 2011  Aaron Patterson <aaron@tenderlovemaking.com>

	* lib/test/unit.rb: partial revert of r30849. [ruby-core:32864]

	* test/testunit/test_rake_integration.rb: adding an integration test
	  with the rake loader to prevent regressions.

Fri Feb 18 19:31:31 2011  Shugo Maeda  <shugo@ruby-lang.org>
