@@ -1,3 +1,10 @@
+Mon Feb 21 10:05:10 2011  Aaron Patterson <aaron@tenderlovemaking.com>
+
+	* ext/psych/lib/psych/json/ruby_events.rb: DRY up ruby event handling
+	  for JSON.
+	* ext/psych/lib/psych/visitors/json_tree.rb: use ruby events module
+	* ext/psych/lib/psych/json/stream.rb: ditto
+
 Mon Feb 21 10:01:01 2011  Aaron Patterson <aaron@tenderlovemaking.com>
 
 	* ext/psych/lib/psych/json/stream.rb: fix JSON stream emits to use
